fix image overlapping, properly hide and reveal various classes

--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,7 @@ color: green;
 #bigJavaText {
 width: 70vw;
 font-size: 20pt;
+padding-left: 5vw;
 }
 
 .b-answers {
